frontend/src/app/App.scss
html,
body,
#root {
  height: 100%;
}

#dashboard-page-main {
  // Establish positioning relative to the top left of the main container.
  position: relative;
  overflow-y: auto;
}

.odh-dashboard {
  &__page-content {
    border: 1px solid var(--pf-t--global--border--color--default);
    display: flex;
    flex: 1;
    margin: var(--pf-t--global--spacer--md);
  }

  &__brand {
    height: 36px;
  }
}

.ai-u-spin {
  animation: pf-v6-c-spinner-animation-rotate 3s linear infinite;
}

// TODO: Remove when PF bug is fixed. See https://github.com/patternfly/patternfly-react/issues/9769
// Override to prevent drawer body content from taking over scroll container
.pf-v6-c-drawer__body {
  min-height: 0;
}

.pf-v6-c-truncate {
  --pf-v6-c-truncate--MinWidth: 0;
  --pf-v6-c-truncate__start--MinWidth: 0;
}

// TODO: Remove when PF bug is fixed. https://github.com/patternfly/react-catalog-view/issues/74
.vertical-tabs-pf-tab {
  > a {
    text-decoration: none;
  }
}

// TODO: Remove when PF bug is fixed. https://github.com/patternfly/patternfly-react/issues/11314
.pf-v6-c-table__text.pf-m-truncate {
  min-width: max(100%, 5ch);
}

// FIXME https://github.com/patternfly/patternfly/issues/7104
.pf-v6-c-label-group {
  max-width: 100%;

  &__main,
  &__list,
  &__list-item {
    max-width: 100%;
  }
}

.pf-v6-c-popover.odh-u-scrollable .pf-v6-c-popover__body {
  max-height: 65vh;
  overflow: auto;
}

// Necessary to scroll select menus with grouped sections. Remove when https://github.com/patternfly/patternfly/issues/7256 is resolved
.pf-v6-c-menu {
  &.pf-m-scrollable .pf-v6-c-menu__content {
    overflow: auto;
  }
  &.pf-m-drilldown:not(.pf-m-scrollable) {
    overflow: hidden;
  }
}

